I can the description in the welcom message

--- a/site2.html
+++ b/site2.html
@@ -112,7 +112,7 @@
 <body>
 
   <header>
-    <h1>Bright Future Ahead</h1>
+    <h1> Make your Bright Future Ahead</h1>
     <p>Your modern, responsive one-page website template</p>
   </header>
 
